# ai

./: README.md
doc/: README.md  ml-ecosystem.md  ml-system-lifecycle.md  ml.md  mlops.md
ml/image-classifier/: README.md  environment.yml  pyproject.toml
ml/image-classifier/script/: install.sh
ml/image-classifier/src/image_classifier/: __init__.py  dataloader.py  dataset.py  evaluate.py  inference.py  model.py  package.py  predict.py  preprocess.py  train.py  util.py
ml/image-classifier/test/: test_inference.py
mlops/image-classifier-frontend-v1/: .dockerignore  Dockerfile  README.md  docker-compose.yaml  environment.yml  pyproject.toml
mlops/image-classifier-frontend-v1/script/: install.sh
mlops/image-classifier-frontend-v1/src/image_classifier_frontend_v1/: __init__.py  app.py
mlops/image-classifier-frontend-v2/: .gitignore  Dockerfile  README.md  docker-compose.yaml  environment.yml  pyproject.toml
mlops/image-classifier-frontend-v2/script/: install.sh
mlops/image-classifier-frontend-v2/src/image_classifier_frontend_v2/: __init__.py  app.py
mlops/image-classifier-pipeline/: .dockerignore  .gitattributes  Dockerfile  Dockerfile.dockerignore  NOTES.md  README.md  docker-compose.yaml  environment.yml  pyproject.toml  requirements.txt
mlops/image-classifier-pipeline/script/: install.sh
mlops/image-classifier-pipeline/src/image_classifier_pipeline/: __init__.py  api.py  logging_config.py
mlops/image-classifier-pipeline/src/image_classifier_pipeline/cli/: __init__.py  benchmark.py
mlops/image-classifier-pipeline/src/image_classifier_pipeline/router/: __init__.py  classifier.py
mlops/image-classifier-pipeline/test/: test_api.py
