[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "image-classifier"
version = "0.1.0"
description = "A Python image classifier project."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["torch", "torchvision", "typing_extensions>=4.0"]

[project.optional-dependencies]
test = ["pytest"]

[project.urls]
Repository = "https://github.com/couper64/ai"

[project.scripts]
image-classifier-evaluate = "image_classifier.evaluate:main"
image-classifier-package = "image_classifier.package:main"
image-classifier-predict = "image_classifier.predict:main"
image-classifier-preprocess = "image_classifier.preprocess:main"
image-classifier-train = "image_classifier.train:main"

[tool.hatch.build.targets.wheel]
packages = ["src/image_classifier"]
