[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "image-classifier-pipeline"
version = "0.1.0"
description = "FastAPI serving pipeline for the image classifier."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]",
    "httpx",
    "pillow",
    "python-multipart",
]

[project.optional-dependencies]
test = ["httpx2", "pytest"]

[project.scripts]
image-classifier-pipeline-benchmark = "image_classifier_pipeline.cli.benchmark:main"

[project.urls]
Repository = "https://github.com/couper64/ai"

[tool.hatch.build.targets.wheel]
packages = ["src/image_classifier_pipeline"]

[tool.hatch.build.targets.wheel.force-include]
"src/image_classifier_pipeline/favicon.ico" = "image_classifier_pipeline/favicon.ico"
